--- a/index.html
+++ b/index.html
@@ -12,14 +12,30 @@
 <body>
 
 	<header>
-		<h1>Name</h1>
+		<h1 class="title">Joey Thinkful</h1>
 		<nav>
 			<ul id="menu">
 				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Portfolio</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
+	<main>
+		<section id="home">
+		  <!-- All the Home section can be placed here. -->
+		</section>
+		<section id="about">
+		  <!-- All the About section can be placed here. -->
+		</section>
+		<section id="portfolio">
+		  <!-- All the Portfolio section can be placed here. -->
+		</section>
+		<section id="contact">
+		  <!-- All the Contact section can be placed here. -->
+		</section>
+	  </main>
 </body>
 
 </html>
